[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "autodox"
version = "0.1.12"
authors = [
  { name="k98kurz", email="k98kurz@gmail.com" },
]
description = "Tool for generating documentation automatically from code annotations, types, and docstrings."
readme = "readme.md"
requires-python = ">=3.10"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: ISC License (ISCL)",
  "Operating System :: OS Independent",
  "Topic :: Documentation"
]

[project.urls]
"Homepage" = "https://github.com/k98kurz/autodox"
"Bug Tracker" = "https://github.com/k98kurz/autodox/issues"

[project.scripts]
autodox = "autodox.functions:main_cli"
